fix: rename endpoint + obsolete files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wyxos/task-manager-interface",
+  "name": "@wyxos/zephyr-ui",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
